added support to drop columns from the database
